[package]
name = "vmb"
build = "build.rs"
authors = ["ScriptExec"]
description = "Vostok Mod Builder - A tool for building mods for Road to Vostok"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "cargo"] }
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3.27.0"
time = "0.3.47"
walkdir = "2.5.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"