[package]
name = "vmb"
build = "build.rs"
authors = ["ScriptExec"]
description = "Vostok Mod Builder - A tool for building mods for Road to Vostok"
repository = "https://github.com/ScriptExec/vmb"
readme = "README.md"
version = "0.1.1"
license = "MIT"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "CF05FA90-BC89-481D-A48F-705B038B75B9"
path-guid = "B2C61A0E-6D2F-4811-A1ED-0B7368B77C24"
license = false
eula = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "cargo"] }
console = "0.16.3"
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3.27.0"
time = "0.3.47"
toml = "1.1.2"
walkdir = "2.5.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
