[package]
name = "vmb"
build = "build.rs"
authors = ["ScriptExec"]
description = "Vostok Mod Builder - A tool for building mods for Road to Vostok"
repository = "https://github.com/ScriptExec/vmb"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
version = "0.4.0"
license = "MIT"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "CF05FA90-BC89-481D-A48F-705B038B75B9"
path-guid = "B2C61A0E-6D2F-4811-A1ED-0B7368B77C24"
license = false
eula = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "cargo"] }
console = "0.16.3"
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3.27.0"
time = "0.3.47"
toml = "1.1.2"
walkdir = "2.5.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
semver = { version = "1.0.28", features = ["serde"] }
directories = "6.0.0"
notify = "8.2.0"
regex = "1.12.3"
ctrlc = "3.5.2"
self_update = { version = "0.44.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
indicatif = "0.18.4"
inquire = { version = "0.9.4", features = ["console"] }
getset = "0.1.6"

[profile.release]
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
